# static_test

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
static_test/: config.hpp  static_expect.hpp
static_test/pp/: delay.hpp  misc.hpp  remove_paren.hpp
test/: CMakeLists.txt  dimov-meta.cpp  main.cpp  remove_paren.cpp  tPreprocessor.cpp
